2005-01-11  Bastien Nocera  <hadess@hadess.net>

	* src/metadata-test.c: (main): we don't use translations in there
	it's a test tool

2005-01-11  Bastien Nocera  <hadess@hadess.net>

	* configure.in:
	* data/Makefile.am:
	* src/Makefile.am:
	* src/totem-properties-main.c:
	(totem_properties_plugin_register_type),
	(property_page_provider_iface_init), (totem_properties_get_pages),
	(nautilus_module_initialize), (nautilus_module_shutdown),
	(nautilus_module_list_types):
	* src/totem-properties-page.c:
	* src/totem-properties-view.c: (totem_properties_view_get_type),
	(totem_properties_view_register_type),
	(totem_properties_view_class_init), (on_got_metadata_event),
	(totem_properties_view_init), (totem_properties_view_destroy),
	(totem_properties_view_new), (totem_properties_view_set_location):
	* src/totem-properties-view.h:
	Port the properties page to the non-bonobo nautilus interface
	(Closes: #162850)

2005-01-11  Bastien Nocera  <hadess@hadess.net>

	* data/Makefile.am: remove unused keys_DATA

2005-01-11  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/bacon-video-widget-gst.c: (bacon_video_widget_signal_idler),
	(group_switch), (bacon_video_widget_open),
	(bacon_video_widget_new):
	  Use suburi property for subtitles. Use group-switch to clean
	  metadata cache.

2005-01-11  Bastien Nocera  <hadess@hadess.net>

	* data/Makefile.am:
	* data/Totem_properties.server.in.in._1:
	* data/Totem_properties.server.in.in._3:
	* data/mime-type-include.sh:
	* data/servers.sh: remove the Bonobo server file, as we won't need it soon,
	generate totem-mime-types.h for use in the nautilus property tab

2005-01-11  Bastien Nocera  <hadess@hadess.net>

	* README:
	* data/Makefile.am:
	* data/desktop.sh:
	* data/mime-type-list.txt:
	* data/schemas.sh:
	* data/servers.sh:
	* data/totem.keys: remove totem.keys, as this is for old GNOME versions

2005-01-11  Bastien Nocera  <hadess@hadess.net>

	* data/Makefile.am:
	* data/handlers.sh: