@@ -1,3 +1,10 @@
+2005-01-11  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
+
+	* Makefile.am:
+	* data/Makefile.am:
+	* src/Makefile.am:
+	  Fix make distcheck.
+
 2005-01-11  Bastien Nocera  <hadess@hadess.net>
 
 	* src/metadata-test.c: (main): we don't use translations in there
